syntax = "proto3";

package tweet;

option csharp_namespace = "Tweet.Grpc";

service TweetService {
  rpc GetDailyDigest (DigestRequest) returns (DigestResponse);
}

message DigestRequest {
  string from = 1;
  string to = 2;
}

message DigestItem {
  string tweetId = 1;
  string author = 2;
  string content = 3;
  string createdAt = 4;
}

message DigestResponse {
  repeated DigestItem items = 1;
}
